# rethinking-python

./: .gitignore  Chapter3.py  Chapter4_3.py  Chapter4_4.py  Chapter4_5_1.py  Chapter4_5_2.py  Chapter5_1.py  Chapter5_2.py  Chapter5_3.py  Chapter6_1.py  Chapter6_2.py  Chapter6_3.py  LICENSE  README.md  environment.yml  pyproject.toml
