[project]
name = "rethinking-python"
version = "0.1.0"
description = "Python implementations of the examples from Statistical Rethinking by Richard McElreath"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Thomas Pijper" },
]
requires-python = ">=3.10"
keywords = ["bayesian statistics", "pymc", "statistical rethinking", "arviz"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "arviz==0.23.4",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "plotly==6.7.0",
    "pymc==5.28.4",
    "pymc-extras==0.10.0",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
